add user API skeleton
