# server/ulmapi/controllers/impl/default_controller.py
@@ -60,3 +60,33 @@ def signup_post(signup_info=None):  # noqa: E501
     except NotUniqueError:
         return ('Both email and username must be unique.', 400)
     return 200
+
+
+def users_username_get(username):  # noqa: E501
+    """Get user&#39;s information
+
+     # noqa: E501
+
+    :param username: Username
+    :type username: str
+
+    :rtype: List[UserInfo]
+    """
+    return 'do some magic!'
+
+
+def users_username_put(username, user_info=None):  # noqa: E501
+    """Update user&#39;s information
+
+     # noqa: E501
+
+    :param username: Username
+    :type username: str
+    :param user_info: 
+    :type user_info: dict | bytes
+
+    :rtype: UserInfo
+    """
+    if connexion.request.is_json:
+        user_info = UserInfo.from_dict(connexion.request.get_json())  # noqa: E501
+    return 'do some magic!'
