# server/ulmapi/dto/__init__.py
@@ -6,8 +6,8 @@ from __future__ import absolute_import
 from ulmapi.dto.access_token import AccessToken
 from ulmapi.dto.cat import Cat
 from ulmapi.dto.course_info import CourseInfo
-from ulmapi.dto.create_course_response import CreateCourseResponse
-from ulmapi.dto.delete_course_response import DeleteCourseResponse
+from ulmapi.dto.deliverable_info import DeliverableInfo
 from ulmapi.dto.signup_info import SignupInfo
-from ulmapi.dto.update_course_response import UpdateCourseResponse
+from ulmapi.dto.time_spent_info import TimeSpentInfo
 from ulmapi.dto.user_credentials import UserCredentials
+from ulmapi.dto.user_info import UserInfo
