# server/ulmapi/dto/course_info.py
@@ -6,8 +6,12 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from ulmapi.dto.base_model_ import Model
+from ulmapi.dto.deliverable_info import DeliverableInfo
+from ulmapi.dto.time_spent_info import TimeSpentInfo
 from ulmapi import util
 
+from ulmapi.dto.deliverable_info import DeliverableInfo  # noqa: E501
+from ulmapi.dto.time_spent_info import TimeSpentInfo  # noqa: E501
 
 class CourseInfo(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -15,7 +19,7 @@ class CourseInfo(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, course_id=None, course_name=None, expected_difficulty=None, desired_grade=None):  # noqa: E501
+    def __init__(self, course_id=None, course_name=None, expected_difficulty=None, desired_grade=None, deliverables=None, time_spent=None):  # noqa: E501
         """CourseInfo - a model defined in OpenAPI
 
         :param course_id: The course_id of this CourseInfo.  # noqa: E501
@@ -26,25 +30,35 @@ class CourseInfo(Model):
         :type expected_difficulty: int
         :param desired_grade: The desired_grade of this CourseInfo.  # noqa: E501
         :type desired_grade: int
+        :param deliverables: The deliverables of this CourseInfo.  # noqa: E501
+        :type deliverables: List[DeliverableInfo]
+        :param time_spent: The time_spent of this CourseInfo.  # noqa: E501
+        :type time_spent: List[TimeSpentInfo]
         """
         self.openapi_types = {
             'course_id': str,
             'course_name': str,
             'expected_difficulty': int,
-            'desired_grade': int
+            'desired_grade': int,
+            'deliverables': List[DeliverableInfo],
+            'time_spent': List[TimeSpentInfo]
         }
 
         self.attribute_map = {
             'course_id': 'course_id',
             'course_name': 'course_name',
             'expected_difficulty': 'expected_difficulty',
-            'desired_grade': 'desired_grade'
+            'desired_grade': 'desired_grade',
+            'deliverables': 'deliverables',
+            'time_spent': 'time_spent'
         }
 
         self._course_id = course_id
         self._course_name = course_name
         self._expected_difficulty = expected_difficulty
         self._desired_grade = desired_grade
+        self._deliverables = deliverables
+        self._time_spent = time_spent
 
     @classmethod
     def from_dict(cls, dikt) -> 'CourseInfo':
@@ -160,3 +174,45 @@ class CourseInfo(Model):
             raise ValueError("Invalid value for `desired_grade`, must be a value greater than or equal to `0`")  # noqa: E501
 
         self._desired_grade = desired_grade
+
+    @property
+    def deliverables(self):
+        """Gets the deliverables of this CourseInfo.
+
+
+        :return: The deliverables of this CourseInfo.
+        :rtype: List[DeliverableInfo]
+        """
+        return self._deliverables
+
+    @deliverables.setter
+    def deliverables(self, deliverables):
+        """Sets the deliverables of this CourseInfo.
+
+
+        :param deliverables: The deliverables of this CourseInfo.
+        :type deliverables: List[DeliverableInfo]
+        """
+
+        self._deliverables = deliverables
+
+    @property
+    def time_spent(self):
+        """Gets the time_spent of this CourseInfo.
+
+
+        :return: The time_spent of this CourseInfo.
+        :rtype: List[TimeSpentInfo]
+        """
+        return self._time_spent
+
+    @time_spent.setter
+    def time_spent(self, time_spent):
+        """Sets the time_spent of this CourseInfo.
+
+
+        :param time_spent: The time_spent of this CourseInfo.
+        :type time_spent: List[TimeSpentInfo]
+        """
+
+        self._time_spent = time_spent
