# server/ulmapi/dto/user_info.py
@@ -1,0 +1,152 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from ulmapi.dto.base_model_ import Model
+from ulmapi.dto.course_info import CourseInfo
+from ulmapi import util
+
+from ulmapi.dto.course_info import CourseInfo  # noqa: E501
+
+class UserInfo(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, username=None, email=None, joined_at=None, courses=None):  # noqa: E501
+        """UserInfo - a model defined in OpenAPI
+
+        :param username: The username of this UserInfo.  # noqa: E501
+        :type username: str
+        :param email: The email of this UserInfo.  # noqa: E501
+        :type email: str
+        :param joined_at: The joined_at of this UserInfo.  # noqa: E501
+        :type joined_at: datetime
+        :param courses: The courses of this UserInfo.  # noqa: E501
+        :type courses: List[CourseInfo]
+        """
+        self.openapi_types = {
+            'username': str,
+            'email': str,
+            'joined_at': datetime,
+            'courses': List[CourseInfo]
+        }
+
+        self.attribute_map = {
+            'username': 'username',
+            'email': 'email',
+            'joined_at': 'joined_at',
+            'courses': 'courses'
+        }
+
+        self._username = username
+        self._email = email
+        self._joined_at = joined_at
+        self._courses = courses
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'UserInfo':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The UserInfo of this UserInfo.  # noqa: E501
+        :rtype: UserInfo
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def username(self):
+        """Gets the username of this UserInfo.
+
+
+        :return: The username of this UserInfo.
+        :rtype: str
+        """
+        return self._username
+
+    @username.setter
+    def username(self, username):
+        """Sets the username of this UserInfo.
+
+
+        :param username: The username of this UserInfo.
+        :type username: str
+        """
+        if username is None:
+            raise ValueError("Invalid value for `username`, must not be `None`")  # noqa: E501
+        if username is not None and len(username) < 1:
+            raise ValueError("Invalid value for `username`, length must be greater than or equal to `1`")  # noqa: E501
+
+        self._username = username
+
+    @property
+    def email(self):
+        """Gets the email of this UserInfo.
+
+
+        :return: The email of this UserInfo.
+        :rtype: str
+        """
+        return self._email
+
+    @email.setter
+    def email(self, email):
+        """Sets the email of this UserInfo.
+
+
+        :param email: The email of this UserInfo.
+        :type email: str
+        """
+        if email is None:
+            raise ValueError("Invalid value for `email`, must not be `None`")  # noqa: E501
+        if email is not None and len(email) < 1:
+            raise ValueError("Invalid value for `email`, length must be greater than or equal to `1`")  # noqa: E501
+
+        self._email = email
+
+    @property
+    def joined_at(self):
+        """Gets the joined_at of this UserInfo.
+
+
+        :return: The joined_at of this UserInfo.
+        :rtype: datetime
+        """
+        return self._joined_at
+
+    @joined_at.setter
+    def joined_at(self, joined_at):
+        """Sets the joined_at of this UserInfo.
+
+
+        :param joined_at: The joined_at of this UserInfo.
+        :type joined_at: datetime
+        """
+
+        self._joined_at = joined_at
+
+    @property
+    def courses(self):
+        """Gets the courses of this UserInfo.
+
+
+        :return: The courses of this UserInfo.
+        :rtype: List[CourseInfo]
+        """
+        return self._courses
+
+    @courses.setter
+    def courses(self, courses):
+        """Sets the courses of this UserInfo.
+
+
+        :param courses: The courses of this UserInfo.
+        :type courses: List[CourseInfo]
+        """
+
+        self._courses = courses
