# server/ulmapi/openapi/openapi.yaml
@@ -147,9 +147,9 @@ paths:
       security: []
       summary: Creates a new user (signup)
       x-openapi-router-controller: ulmapi.controllers.impl.default_controller
-  /users/{username}/course:
+  /users/{username}:
     get:
-      operationId: users_username_course_get
+      operationId: users_username_get
       parameters:
       - description: Username
         explode: false
@@ -165,123 +165,20 @@ paths:
             application/json:
               schema:
                 items:
-                  $ref: '#/components/schemas/CourseInfo'
+                  $ref: '#/components/schemas/UserInfo'
                 type: array
           description: OK
         "400":
           description: A malformed request could not be processed, e.g. a field must
             be unique or non-empty but was not
-      summary: Get all courses for the user
-      tags:
-      - Course
-      x-openapi-router-controller: ulmapi.controllers.impl.course_controller
-    post:
-      operationId: users_username_course_post
-      parameters:
-      - description: Username
-        explode: false
-        in: path
-        name: username
-        required: true
-        schema:
-          type: string
-        style: simple
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/CourseInfo'
-      responses:
-        "201":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/CreateCourseResponse'
-          description: Course created
-        "400":
-          description: A malformed request could not be processed, e.g. a field must
-            be unique or non-empty but was not
-      summary: Create a new course for the user
-      tags:
-      - Course
-      x-openapi-router-controller: ulmapi.controllers.impl.course_controller
-  /users/{username}/course/{courseID}:
-    delete:
-      operationId: users_username_course_course_iddelete
-      parameters:
-      - description: Username
-        explode: false
-        in: path
-        name: username
-        required: true
-        schema:
-          type: string
-        style: simple
-      - description: Course ID
-        explode: false
-        in: path
-        name: courseID
-        required: true
-        schema:
-          type: string
-        style: simple
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/DeleteCourseResponse'
-          description: OK
-        "400":
-          description: A malformed request could not be processed, e.g. a field must
-            be unique or non-empty but was not
         "401":
           description: Credentials are missing or invalid
         "404":
           description: Entity could not be found
-      summary: Delete a course for the user
-      tags:
-      - Course
-      x-openapi-router-controller: ulmapi.controllers.impl.course_controller
-    get:
-      operationId: users_username_course_course_idget
-      parameters:
-      - description: Username
-        explode: false
-        in: path
-        name: username
-        required: true
-        schema:
-          type: string
-        style: simple
-      - description: Course ID
-        explode: false
-        in: path
-        name: courseID
-        required: true
-        schema:
-          type: string
-        style: simple
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/CourseInfo'
-          description: OK
-        "400":
-          description: A malformed request could not be processed, e.g. a field must
-            be unique or non-empty but was not
-        "401":
-          description: Credentials are missing or invalid
-        "404":
-          description: Entity could not be found
-      summary: Get course by id for the user
-      tags:
-      - Course
-      x-openapi-router-controller: ulmapi.controllers.impl.course_controller
+      summary: Get user's information
+      x-openapi-router-controller: ulmapi.controllers.impl.default_controller
     put:
-      operationId: users_username_course_course_idput
+      operationId: users_username_put
       parameters:
       - description: Username
         explode: false
@@ -291,25 +188,17 @@ paths:
         schema:
           type: string
         style: simple
-      - description: Course ID
-        explode: false
-        in: path
-        name: courseID
-        required: true
-        schema:
-          type: string
-        style: simple
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CourseInfo'
+              $ref: '#/components/schemas/UserInfo'
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UpdateCourseResponse'
+                $ref: '#/components/schemas/UserInfo'
           description: OK
         "400":
           description: A malformed request could not be processed, e.g. a field must
@@ -318,10 +207,8 @@ paths:
           description: Credentials are missing or invalid
         "404":
           description: Entity could not be found
-      summary: Replace a course for the user
-      tags:
-      - Course
-      x-openapi-router-controller: ulmapi.controllers.impl.course_controller
+      summary: Update user's information
+      x-openapi-router-controller: ulmapi.controllers.impl.default_controller
 components:
   responses:
     AuthorizationError:
@@ -337,7 +224,25 @@ components:
         expected_difficulty: 1
         course_id: course_id
         course_name: course_name
+        deliverables:
+        - grade: 14
+          weight: 59
+          due_at: 2000-01-23T04:56:07.000+00:00
+          completed: true
+          deliverable_name: deliverable_name
+        - grade: 14
+          weight: 59
+          due_at: 2000-01-23T04:56:07.000+00:00
+          completed: true
+          deliverable_name: deliverable_name
         desired_grade: 60
+        time_spent:
+        - notes: notes
+          started_at: 2000-01-23T04:56:07.000+00:00
+          ended_at: 2000-01-23T04:56:07.000+00:00
+        - notes: notes
+          started_at: 2000-01-23T04:56:07.000+00:00
+          ended_at: 2000-01-23T04:56:07.000+00:00
       properties:
         course_id:
           minLength: 1
@@ -355,56 +260,140 @@ components:
           maximum: 100
           minimum: 0
           type: integer
+        deliverables:
+          items:
+            $ref: '#/components/schemas/DeliverableInfo'
+          type: array
+        time_spent:
+          items:
+            $ref: '#/components/schemas/TimeSpentInfo'
+          type: array
       required:
       - course_id
       - course_name
       - desired_grade
       - expected_difficulty
       type: object
-    CreateCourseResponse:
+    DeliverableInfo:
       example:
-        course_id: course_id
-        created_at: 2000-01-23T04:56:07.000+00:00
-        username: username
+        grade: 14
+        weight: 59
+        due_at: 2000-01-23T04:56:07.000+00:00
+        completed: true
+        deliverable_name: deliverable_name
       properties:
-        created_at:
+        deliverable_name:
+          minLength: 1
+          type: string
+        grade:
+          format: int32
+          maximum: 100
+          minimum: 0
+          type: integer
+        weight:
+          format: int32
+          maximum: 100
+          minimum: 0
+          type: integer
+        due_at:
           format: date-time
           type: string
-        course_id:
-          type: string
-        username:
-          type: string
-      required:
-      - course_id
-      - created_at
-      - username
-      type: object
-    UpdateCourseResponse:
-      example:
-        course_id: course_id
-        updated_at: 2000-01-23T04:56:07.000+00:00
-        username: username
-      properties:
-        updated_at:
-          format: date-time
-          type: string
-        course_id:
-          type: string
-        username:
-          type: string
-      required:
-      - course_id
-      - updated_at
-      - username
-      type: object
-    DeleteCourseResponse:
-      example:
-        deleted: true
-      properties:
-        deleted:
+        completed:
           type: boolean
       required:
-      - deleted
+      - completed
+      - deliverable_name
+      - due_at
+      - grade
+      - weight
+      type: object
+    TimeSpentInfo:
+      example:
+        notes: notes
+        started_at: 2000-01-23T04:56:07.000+00:00
+        ended_at: 2000-01-23T04:56:07.000+00:00
+      properties:
+        notes:
+          minLength: 1
+          type: string
+        started_at:
+          format: date-time
+          type: string
+        ended_at:
+          format: date-time
+          type: string
+      required:
+      - ended_at
+      - notes
+      - started_at
+      type: object
+    UserInfo:
+      example:
+        joined_at: 2000-01-23T04:56:07.000+00:00
+        courses:
+        - expected_difficulty: 1
+          course_id: course_id
+          course_name: course_name
+          deliverables:
+          - grade: 14
+            weight: 59
+            due_at: 2000-01-23T04:56:07.000+00:00
+            completed: true
+            deliverable_name: deliverable_name
+          - grade: 14
+            weight: 59
+            due_at: 2000-01-23T04:56:07.000+00:00
+            completed: true
+            deliverable_name: deliverable_name
+          desired_grade: 60
+          time_spent:
+          - notes: notes
+            started_at: 2000-01-23T04:56:07.000+00:00
+            ended_at: 2000-01-23T04:56:07.000+00:00
+          - notes: notes
+            started_at: 2000-01-23T04:56:07.000+00:00
+            ended_at: 2000-01-23T04:56:07.000+00:00
+        - expected_difficulty: 1
+          course_id: course_id
+          course_name: course_name
+          deliverables:
+          - grade: 14
+            weight: 59
+            due_at: 2000-01-23T04:56:07.000+00:00
+            completed: true
+            deliverable_name: deliverable_name
+          - grade: 14
+            weight: 59
+            due_at: 2000-01-23T04:56:07.000+00:00
+            completed: true
+            deliverable_name: deliverable_name
+          desired_grade: 60
+          time_spent:
+          - notes: notes
+            started_at: 2000-01-23T04:56:07.000+00:00
+            ended_at: 2000-01-23T04:56:07.000+00:00
+          - notes: notes
+            started_at: 2000-01-23T04:56:07.000+00:00
+            ended_at: 2000-01-23T04:56:07.000+00:00
+        email: email
+        username: username
+      properties:
+        username:
+          minLength: 1
+          type: string
+        email:
+          minLength: 1
+          type: string
+        joined_at:
+          format: date-time
+          type: string
+        courses:
+          items:
+            $ref: '#/components/schemas/CourseInfo'
+          type: array
+      required:
+      - email
+      - username
       type: object
     UserCredentials:
       example:
